# clipforge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  main.py  middleware.py
app/api/: dependencies.py  routes.py  schemas.py
app/core/: __init__.py  config.py  logging.py  security.py
app/models/: base.py  mock.py  openclip.py  siglip2.py
app/services/: index.py  inference.py  interactive.py  jobs.py  runtime.py  vector_store.py
app/web/: index.html
app/web/assets/: app.css  app.js
scripts/: evaluate_models.py
tests/: conftest.py  test_api.py  test_index.py  test_inference.py  test_interactive.py  test_vector_store.py
