[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipforge"
version = "0.2.0"
description = "Production-ready multimodal embedding and semantic search platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "numpy>=1.26,<3",
  "pillow>=10.4,<12",
  "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
ml = [
  "open-clip-torch>=2.26,<3",
  "torch>=2.7,<2.8",
  "torchvision>=0.22,<0.23",
  "transformers>=5,<6",
  "accelerate>=1.2,<2",
  "safetensors>=0.4,<1",
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]
eval = [
  "matplotlib>=3.9,<4",
  "psutil>=6,<8",
]

[project.scripts]
clipforge = "app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "open_clip",
  "torch",
  "transformers",
  "psutil",
  "torchvision",
  "torchvision.*",
]
ignore_missing_imports = true
